[metadata]
description_file = README.md
name = pyxantech
url = https://github.com/rsnodgrass/pyxantech
license = MIT
license_file = LICENSE
        description = Python RS232 API for Multi-Zone Amps (Monoprice,Xantech,Daytona Audio)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages =
  pyxantech
python_requires >= 3.7
zip_safe = True
install_requires =
  pyserial>=3.4
  pyserial-asyncio>=0.4

[mypy]
python_version = 3.10
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = True
warn_unused_ignores = true
[mypy-serial]
ignore_missing_imports = True
[mypy-serial_asyncio]
ignore_missing_imports = True
